--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 ﻿<!DOCTYPE html>
 <html>
 
@@ -199,8 +198,8 @@
 				.done(function( dataX, textStatus, jqXHR ){	                   				
 					var respstr = dataX.trim();                    
 					if(respstr == "1")
-                    {                       
-                        relocate("webtrack/");                       
+                    {                           
+						relocate("header/");						
                     }
                     else
                     {                     
